@@ -9,8 +9,15 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Stream;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Tag;
@@ -22,6 +29,8 @@ import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
 @SpringBootTest
 @Tag("data")
 class NormsApiSearchDataTest extends BaseApiSearchDataTest {
+
+  private static final Logger logger = LogManager.getLogger(NormsApiSearchDataTest.class);
 
   private int maxEntries = 1000;
 
@@ -69,7 +78,7 @@ class NormsApiSearchDataTest extends BaseApiSearchDataTest {
       Response response = searchWithTerm(abbreviation);
       List<Map<String, Object>> members = response.path("member");
       if (members == null || members.isEmpty()) return Optional.empty();
-      Map<String, Object> firstMatch = members.get(0);
+      Map<String, Object> firstMatch = members.getFirst();
       String abbreviationFromMatch =
           (String) ((Map<String, Object>) firstMatch.get("item")).get("abbreviation");
 
@@ -77,9 +86,118 @@ class NormsApiSearchDataTest extends BaseApiSearchDataTest {
         return Optional.of(abbreviation);
       }
     } catch (Exception e) {
-      System.out.println("Error occurred while searching for abbreviation: " + abbreviation);
-      e.printStackTrace();
+      logger.error("Error occurred while searching for abbreviation: {}", abbreviation, e);
     }
     return Optional.empty();
+  }
+
+  record ArticleNumberAndAbbreviation(String abbreviation, String articleNumber) {}
+
+  @Test
+  void searchForArticleNumberAndAbbreviation() {
+    List<ArticleNumberAndAbbreviation> searchCases =
+        fetchSearchStrings(maxEntries, apiUrl, this::extractArticleNumbersAndAbbreviations);
+
+    var set = new HashSet<>(searchCases);
+
+    List<ArticleNumberAndAbbreviation> successfulAbbreviations =
+        searchForSearchTerm(
+            this::searchForSingleArticleNumberAndAbbreviation, set.stream().toList());
+    double successRate = calculatePercentage(successfulAbbreviations.size(), set.size());
+
+    successfulAbbreviations.forEach(set::remove);
+    logger.info("success rate: {}", successRate);
+    logger.info("failed cases sample: {}", set.stream().limit(20).toList());
+    assertThat(successRate, Matchers.greaterThan(threshold));
+  }
+
+  private List<ArticleNumberAndAbbreviation> extractArticleNumbersAndAbbreviations(
+      Response response) {
+    List<Map<String, Object>> members = response.path("member");
+    final Stream<Map<String, Object>> itemsWithAbbreviation =
+        members.stream()
+            .filter(
+                member -> {
+                  String abbreviation =
+                      (String) ((Map<String, Object>) member.get("item")).get("abbreviation");
+                  return StringUtils.isNotBlank(abbreviation);
+                });
+
+    return itemsWithAbbreviation
+        .flatMap(
+            member -> {
+              String abbreviation =
+                  (String) ((Map<String, Object>) member.get("item")).get("abbreviation");
+              String detailUrl =
+                  ((Map<String, Object>)
+                          ((Map<String, Object>) member.get("item")).get("workExample"))
+                      .get("@id")
+                      .toString();
+              Response detailResponse = NormsApiSearchDataTest.this.fetchPageResponse(detailUrl);
+              var articleNames = (List<String>) detailResponse.path("workExample.hasPart.name");
+              Pattern pattern = Pattern.compile("§ \\d+");
+              return articleNames.stream()
+                  .map(
+                      name -> {
+                        Matcher matcher = pattern.matcher(name);
+                        if (matcher.find()) {
+                          return new ArticleNumberAndAbbreviation(abbreviation, matcher.group());
+                        } else {
+                          return null;
+                        }
+                      })
+                  .filter(Objects::nonNull)
+                  .limit(10);
+            })
+        .toList();
+  }
+
+  private Optional<ArticleNumberAndAbbreviation> searchForSingleArticleNumberAndAbbreviation(
+      ArticleNumberAndAbbreviation testCase) {
+    String searchTerm = testCase.articleNumber + " " + testCase.abbreviation;
+    try {
+      Response response = searchWithTerm(searchTerm);
+      List<Map<String, Object>> members = response.path("member");
+      if (members == null || members.isEmpty()) {
+        logger.error("No members found for search term {}", searchTerm);
+        return Optional.empty();
+      }
+      Map<String, Object> firstMatch = members.getFirst();
+
+      if (matchHasAbbreviation(firstMatch, testCase.abbreviation)
+          && matchHasArticleAsFirstTextMatch(firstMatch, testCase.articleNumber)) {
+        return Optional.of(testCase);
+      }
+
+    } catch (Exception e) {
+      logger.error("Error occurred while searching for searchTerm: {}", searchTerm, e);
+    }
+    return Optional.empty();
+  }
+
+  private boolean matchHasAbbreviation(Map<String, Object> match, String expectedAbbreviation) {
+    String actualAbbreviation =
+        (String) ((Map<String, Object>) match.get("item")).get("abbreviation");
+    final boolean equals = Objects.equals(expectedAbbreviation, actualAbbreviation);
+    if (!equals) {
+      logger.warn(
+          "Received abbreviation {} does not match {}", actualAbbreviation, expectedAbbreviation);
+    }
+    return equals;
+  }
+
+  private boolean matchHasArticleAsFirstTextMatch(Map<String, Object> match, String articleNumber) {
+    final var textMatches = (List<Map<String, String>>) match.get("textMatches");
+    if (textMatches.isEmpty()) {
+      logger.warn(
+          "No text matches in result {}, looking for article number {}", match, articleNumber);
+      return false;
+    }
+    String name = textMatches.getFirst().get("name");
+    final boolean nameHasExpectedPrefix = name.startsWith(articleNumber);
+    if (!nameHasExpectedPrefix) {
+      logger.warn("Unexpected article name {}, expected {}", name, articleNumber);
+    }
+    return nameHasExpectedPrefix;
   }
 }
